---
source: tests/edge_cases.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  br label %add_merge

add_merge:                                        ; preds = %entry, %add_merge
  %payload_to_f6455 = phi double [ 1.000000e+00, %entry ], [ %payload_to_f64, %add_merge ]
  %addtmp = fadd double %payload_to_f6455, 1.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %is_negative.not = icmp ult i64 %payload_masked, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %payload_masked
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %cmptmp = icmp sgt i64 %signed_payload, 0
  br i1 %cmptmp, label %add_merge, label %print_int

print_int:                                        ; preds = %add_merge
  %to_int = fptosi double %payload_to_f64 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
